experiment with loops

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p>Your favorite things are: <span class="movie"></span>, <span class="book"></span>, <span class="animal"></span>, <span class="color"></span>.</p>
       </div>
 
+      <div class="flavors"
+        <p>My favorite ice-cream flavors are: <span class="flavors"></span>.</p>
+
     </div>
   </body>
 </html>
