--- a/index.html
+++ b/index.html
@@ -10,38 +10,39 @@
   </head>
   <body>
     <div class="container">
+      <h1 id="test">test</h1>
       <h2>What are your favorite things?</h2>
       <form id="form">
-            <div>
-              <label for="movie">What is your favorite movie?</label>
-              <input id="movie" type="text">
-            </div>
+        <div>
+          <label for="movie">What is your favorite movie?</label>
+          <input id="movie" type="text">
+        </div>
 
-            <div>
-              <label for="book">What is your favorite book?</label>
-              <input id="book" type="text">
-            </div>
+        <div>
+          <label for="book">What is your favorite book?</label>
+          <input id="book" type="text">
+        </div>
 
-            <div>
-              <label for="animal">What is your favorite animal?</label>
-              <input id="animal" type="text">
-            </div>
+        <div>
+          <label for="animal">What is your favorite animal?</label>
+          <input id="animal" type="text">
+        </div>
 
-            <div>
-              <label for="color">What is your favorite color?</label>
-              <input id="color" type="text">
-            </div>
+        <div>
+          <label for="color">What is your favorite color?</label>
+          <input id="color" type="text">
+        </div>
 
-            <button id="button" type="button" class="btn btn-info">Submit</button>
+        <button id="button" type="button" class="btn btn-info">Submit</button>
       </form>
 
-      <div class="answer"
+      <div class="answer">
         <p>Your favorite things are: <span class="movie"></span>, <span class="book"></span>, <span class="animal"></span>, <span class="color"></span>.</p>
       </div>
 
-      <div class="flavors"
-        <p>My favorite ice-cream flavors are: <span class="flavors"></span>.</p>
-
+      <div class="flavors">
+        <p>My favorite ice-cream flavors are:</p>
+      </div>
     </div>
   </body>
 </html>
